fixed first page alignment fixed home path fixed image backgrounds and cart but still can't close cart

--- a/css/nav.css
+++ b/css/nav.css
@@ -69,7 +69,7 @@
 }
 
 .topnav{
-    text-align: sticky;
+    float: right;
     top: 0;
     left: 0;
     width: 100%;
