--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,11 @@ from week 4
     margin-left: auto;
     margin-right: auto;
 }
-.centerpicture{
-    display:block;
-    margin-left: auto;
+.logopicture{
+    float: left;
+    margin-left: 0px;
     margin-right: auto;
-    width: 50%;
+    width: 20%;
 }
 input[type=textform], select, textarea {
     width: 100%; /* Full width */
